<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general" android:key="general_category">
        <ListPreference android:key="language"
            android:title="@string/language"
            android:summary="@string/language_desc"
            android:defaultValue=""
            android:entries="@array/languages"
            android:entryValues="@array/languageValues"/>

        <ListPreference android:key="theme"
            android:title="@string/theme"
            android:summary="@string/theme_desc"
            android:defaultValue="system"
            android:entries="@array/themeEntries"
            android:entryValues="@array/themeValues"/>

        <EditTextPreference android:key="refresh_rate" android:defaultValue="5" android:summary="@string/refresh_rate_desc" android:title="@string/refresh_rate" android:inputType="number"/>
        <CheckBoxPreference android:key="text_marquee" android:title="@string/text_marquee" android:summary="@string/text_marquee_desc" android:defaultValue="true"/>
		<CheckBoxPreference android:key="keep_screen_on" android:title="@string/keep_screen_on" android:summary="@string/keep_screen_on_desc" android:defaultValue="true"/>
        <CheckBoxPreference android:key="pull_captcha" android:title="@string/retrieve_captcha" android:summary="@string/retrieve_captcha_desc" android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/clicknload" android:key="clicknload_category">
        <org.pyload.android.client.components.ClickNLoadPreferenceScreen
            android:key="clicknload"
            android:title="@string/clicknload"
            android:summary="@string/clicknload_desc"/>
    </PreferenceCategory>

    <PreferenceCategory android:key="connection_category" android:title="@string/connection">
        <Preference
            android:key="manage_servers_pref"
            android:title="@string/servers"
            android:summary="@string/manage_servers" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about" android:key="about_category">
        <PreferenceScreen
            android:key="about_screen">

            <Preference
                android:key="about_header"
                android:layout="@layout/about_header"
                android:selectable="false" />

            <org.pyload.android.client.components.CopyablePreference
                android:key="version"
                android:title="@string/version" />
            <org.pyload.android.client.components.CopyablePreference
                android:key="git_commit"
                android:title="@string/git_commit" />
            <org.pyload.android.client.components.CopyablePreference
                android:key="build_date"
                android:title="@string/build_date" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
