<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="server_details"
        android:title="@string/server_details">
        <EditTextPreference
            android:key="server_name"
            android:singleLine="true"
            android:summary="@string/server_name_hint"
            android:title="@string/server_name" />
        <EditTextPreference
            android:key="host"
            android:singleLine="true"
            android:summary="@string/ip_desc"
            android:title="@string/ip" />
        <EditTextPreference
            android:defaultValue="8000"
            android:inputType="number"
            android:key="port"
            android:singleLine="true"
            android:summary="@string/port_desc"
            android:title="@string/port" />
        <EditTextPreference
            android:defaultValue=""
            android:key="path_prefix"
            android:singleLine="true"
            android:summary="@string/path_prefix_desc"
            android:title="@string/path_prefix" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="ssl"
            android:summary="@string/ssl_desc"
            android:title="@string/ssl" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ssl_validate"
            android:summary="@string/ssl_validate_desc"
            android:title="@string/ssl_validate" />
        <EditTextPreference
            android:key="api_key"
            android:singleLine="true"
            android:summary="@string/api_key_desc"
            android:title="@string/api_key" />
    </PreferenceCategory>

</PreferenceScreen>
