<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_links"
        android:titleCondensed="@string/add_links"
        android:title="@string/add_links"
        android:icon="@drawable/ic_menu_add"
        app:iconTint="?attr/colorOnSurface" />
    <item
        android:id="@+id/refresh"
        android:titleCondensed="@string/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_menu_refresh"
        app:iconTint="?attr/colorOnSurface" />
    <item
       android:id="@+id/settings"
       android:titleCondensed="@string/app_settings"
       android:title="@string/app_settings"
       android:icon="@drawable/ic_menu_manage"
       app:iconTint="?attr/colorOnSurface" />

    <item
        android:id="@+id/remote_settings"
        android:icon="@drawable/ic_tab_settings"
        android:title="@string/remote_settings"
        app:iconTint="?attr/colorOnSurface" />

    <item
        android:id="@+id/show_accounts"
        android:icon="@drawable/ic_tab_accounts"
        android:title="@string/accounts"
        app:iconTint="?attr/colorOnSurface" />

    <item
        android:id="@+id/restart_failed"
        android:icon="@drawable/ic_menu_restart"
        android:title="@string/restart_failed"
        app:iconTint="?attr/colorOnSurface" />

    <item
        android:id="@+id/clear_finished"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/clear_finished"
        app:iconTint="?attr/colorOnSurface" />

</menu>
