<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_links_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fitsSystemWindows="true">
<LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

<TextView
    android:id="@+id/TextViewTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/addlinks_desc"
    android:textColor="@color/textPrimary"
    android:textSize="10pt">
</TextView>

<EditText
    android:id="@+id/new_packname"
    android:layout_height="wrap_content"
    android:hint="@string/name"
    android:inputType="text"
    android:layout_width="fill_parent">
</EditText>

<EditText
    android:id="@+id/links"
    android:layout_height="wrap_content"
    android:hint="@string/package_links"
    android:inputType="textMultiLine"
    android:lines="5"
    android:layout_width="fill_parent">
</EditText>

<EditText
    android:id="@+id/password"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:layout_width="fill_parent">
</EditText>


<Spinner
    android:id="@+id/destination"
    android:layout_height="wrap_content"
    android:prompt="@string/destination"
    android:layout_width="fill_parent"
    android:entries="@array/destination_list">
</Spinner>

<LinearLayout android:layout_height="wrap_content" 
	android:layout_width="match_parent"
	android:id="@+id/linearLayout1" 
	android:orientation="horizontal"
	android:gravity="center_vertical"
	android:layout_weight="1">

<TextView
    android:id="@+id/filename"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:hint="@string/choose_file"
    android:lines="1"
    android:background="?android:attr/editTextBackground"
    android:padding="8dp"
    android:gravity="center_vertical"
    android:textColor="@color/textPrimary"
    android:textSize="18sp">
</TextView>

<Button  
    android:id="@+id/button_pick"  
    style="@style/SecondaryButton"
    android:layout_height="wrap_content"
    android:text="@string/choose"  
    android:onClick="pickFile"  
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_marginStart="8dp">
</Button>

</LinearLayout>  

<LinearLayout android:layout_height="wrap_content" 
	android:layout_width="fill_parent"
	android:id="@+id/linearLayout2" 
	android:orientation="horizontal"
	android:gravity="center_horizontal"
	android:layout_weight="1">

<Button  
    android:id="@+id/button_add"  
    style="@style/PrimaryButton"
    android:layout_height="wrap_content"
    android:text="@string/add"  
    android:onClick="addPackage"  
    android:layout_width="0dp"
    android:layout_weight="1">  
</Button>

<Button  
    android:id="@+id/button_cancel"  
    style="@style/SecondaryButton"
    android:layout_height="wrap_content"
    android:text="@string/cancel"  
    android:onClick="onCancel"  
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_marginStart="8dp">
</Button>

</LinearLayout>  

    </LinearLayout>
</ScrollView>
